# SnakesAndLadders

./: readme.md
frontend/: CMakeLists.txt
frontend/core/: BaseService.h
frontend/services/: GameService.h  LobbyService.h
frontend/views/createGameView/: creategameview.cpp
